tests/fixtures/invalid/max_str_int.py
# Cannot call max() with Str, Int
x = max("hello", 1)
